new update train model

--- a/src/Feature Engneering.ipynb
+++ b/src/Feature Engneering.ipynb
@@ -10,10 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "97cc7466",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Workplace\\Data_Analyst\\VNNewsClassifcation\\venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -26,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "f26c7fbd",
    "metadata": {},
    "outputs": [],
@@ -36,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "26dad721",
    "metadata": {},
    "outputs": [
@@ -161,7 +170,7 @@
        "4                    thu ngân_sách tp hcm kỳ đất_đai          237         237  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "541afd99",
    "metadata": {},
    "outputs": [
@@ -182,7 +191,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,17 +202,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "00d19cd1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.int64(9)"
+       "np.int64(0)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "18871594",
    "metadata": {},
    "outputs": [],
@@ -224,21 +233,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "4837b676",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.int64(0)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = df.dropna(subset=['clean_content', 'clean_title', 'token_count', 'category']).reset_index(drop=True)"
    ]
@@ -253,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "f097b610",
    "metadata": {},
    "outputs": [
@@ -333,7 +331,7 @@
        "1  đề_xuất nhà_nước thu_hồi đất một_nửa chủ_sở_hữ...          276         276  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "c9e5b898",
    "metadata": {},
    "outputs": [
@@ -352,7 +350,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_6728\\3544971474.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_13412\\3544971474.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -377,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "9f35c718",
    "metadata": {},
    "outputs": [],
@@ -388,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "5d4b4cd1",
    "metadata": {},
    "outputs": [
@@ -438,7 +436,7 @@
        ")"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "id": "5db06568",
    "metadata": {},
    "outputs": [],
@@ -495,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "2abdebd3",
    "metadata": {},
    "outputs": [
@@ -514,7 +512,7 @@
        "      dtype=float32)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "d3e7ca5d",
    "metadata": {},
    "outputs": [
@@ -544,7 +542,7 @@
        "(67150, 3)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "id": "5aa8cf10",
    "metadata": {},
    "outputs": [
@@ -2675,7 +2673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "id": "d5b2bbd8",
    "metadata": {},
    "outputs": [
@@ -4795,7 +4793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "id": "0d43c5e2",
    "metadata": {},
    "outputs": [],
@@ -4805,7 +4803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "id": "68eebac5",
    "metadata": {},
    "outputs": [],
@@ -4827,7 +4825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "id": "2cefd8ef",
    "metadata": {},
    "outputs": [],
