--- a/src/Pre-processing.ipynb
+++ b/src/Pre-processing.ipynb
@@ -18,10 +18,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "c9405ba4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Workplace\\Data_Analyst\\VNNewsClassifcation\\venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import re\n",
@@ -498,124 +507,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "05c817ba",
+   "execution_count": null,
+   "id": "18e9b4ad",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>content</th>\n",
-       "      <th>category</th>\n",
-       "      <th>raw_word_count</th>\n",
-       "      <th>clean_content</th>\n",
-       "      <th>clean_title</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>9952</th>\n",
-       "      <td>Đến 10 nước trong 24 giờ</td>\n",
-       "      <td>Jo Kibble, sống ở phía nam London, Anh bắt đầu...</td>\n",
-       "      <td>Du lịch</td>\n",
-       "      <td>509</td>\n",
-       "      <td>jo kibble sống nam london thử_thách đi quốc_gi...</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12527</th>\n",
-       "      <td>Việc nhà</td>\n",
-       "      <td>Với một cặp vợ chồng son, \"việc nhà\" chỉ quanh...</td>\n",
-       "      <td>Gia đình</td>\n",
-       "      <td>578</td>\n",
-       "      <td>cặp vợ_chồng son quanh_quẩn đơn_giản nhẹ_nhàng...</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15716</th>\n",
-       "      <td>Những điều bạn nên làm với con của mình ít nhấ...</td>\n",
-       "      <td>Chơi đùa cùng con Chơi đùa vui vẻ có thể là mộ...</td>\n",
-       "      <td>Gia đình</td>\n",
-       "      <td>429</td>\n",
-       "      <td>chơi_đùa chơi_đùa vui_vẻ tuyệt_vời ba_mẹ gắn_k...</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40070</th>\n",
-       "      <td>Có nhất thiết phải ăn sáng đúng giờ?</td>\n",
-       "      <td>Trả lời: Các chuyên gia dinh dưỡng đều khuyên ...</td>\n",
-       "      <td>Sức khỏe</td>\n",
-       "      <td>329</td>\n",
-       "      <td>trả_lời chuyên_gia dinh_dưỡng khuyên cố_định h...</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>64485</th>\n",
-       "      <td>Vì sao chúng ta không thích một ai đó?</td>\n",
-       "      <td>Theo chuyên gia, có 6 lý do khiến chúng ta nảy...</td>\n",
-       "      <td>Đời sống</td>\n",
-       "      <td>854</td>\n",
-       "      <td>chuyên_gia nảy_sinh cảm_giác khó_chịu khác_biệ...</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                   title  \\\n",
-       "9952                            Đến 10 nước trong 24 giờ   \n",
-       "12527                                           Việc nhà   \n",
-       "15716  Những điều bạn nên làm với con của mình ít nhấ...   \n",
-       "40070               Có nhất thiết phải ăn sáng đúng giờ?   \n",
-       "64485             Vì sao chúng ta không thích một ai đó?   \n",
-       "\n",
-       "                                                 content  category  \\\n",
-       "9952   Jo Kibble, sống ở phía nam London, Anh bắt đầu...   Du lịch   \n",
-       "12527  Với một cặp vợ chồng son, \"việc nhà\" chỉ quanh...  Gia đình   \n",
-       "15716  Chơi đùa cùng con Chơi đùa vui vẻ có thể là mộ...  Gia đình   \n",
-       "40070  Trả lời: Các chuyên gia dinh dưỡng đều khuyên ...  Sức khỏe   \n",
-       "64485  Theo chuyên gia, có 6 lý do khiến chúng ta nảy...  Đời sống   \n",
-       "\n",
-       "       raw_word_count                                      clean_content  \\\n",
-       "9952              509  jo kibble sống nam london thử_thách đi quốc_gi...   \n",
-       "12527             578  cặp vợ_chồng son quanh_quẩn đơn_giản nhẹ_nhàng...   \n",
-       "15716             429  chơi_đùa chơi_đùa vui_vẻ tuyệt_vời ba_mẹ gắn_k...   \n",
-       "40070             329  trả_lời chuyên_gia dinh_dưỡng khuyên cố_định h...   \n",
-       "64485             854  chuyên_gia nảy_sinh cảm_giác khó_chịu khác_biệ...   \n",
-       "\n",
-       "      clean_title  \n",
-       "9952               \n",
-       "12527              \n",
-       "15716              \n",
-       "40070              \n",
-       "64485              "
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.loc[(df['clean_title'] == \"\") | (df['clean_content'] == \"\")].head()"
    ]
